--- a/public/life/memories.html
+++ b/public/life/memories.html
@@ -151,7 +151,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 col-sm-4 col-xs-6">
-                <a class="site-title">Con<span>Volt</span>er</a>
+                <a class="site-title">Keep<span>Paws</span>Posted</a>
                 <p>Built by Andrew Zhang for CS 160 (User Interface Design and Development).
                 </p>
                 <br>
