add main menu link

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         </div>
         <br><br><br><br>
         <div class="row">
+            <a href="/health/health.html">Health</a>
             <a href="/food/main.html">Nutrition</a>
             <a href="/life/memories.html">Memories</a>
             <a href="/life/milestones.html">Milestones</a>
