--- a/public/life/memories.html
+++ b/public/life/memories.html
@@ -66,10 +66,12 @@
                       <div class="col-sm-6">
                         <img src="pet-picture.jpg" alt="Pet's Picture">
                       </div>
+                      </div>
+                      </div>
                       
-                      <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-              </div>
-              <div>
+                      <br><br><br><br><br><br><br><br><br><br><br>
+        <div class="container">
+            <div class="row">
                 
                 <h2>Barney</h2>
                 <p>Shih Tzu</p>
