new icons for navbar

--- a/public/food/main.html
+++ b/public/food/main.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar-custom fixed-top pt-2 pb-2">
+    <nav class="navbar-custom pt-2 pb-2">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="/images/paw_logo.png" width="30" height="30" class="d-inline-block align-text-top">
@@ -22,8 +22,6 @@
           </a>
         </div>
     </nav>
-    <br>
-    <br>
     <div class="container">
         <div class="row mt-4 mb-2 title">
             <div class="col-12">
@@ -244,7 +242,7 @@
                     <div class="row">
                         <img src="../images/info_page.png" class="navbar-item img-responsive">
                     </div>
-                    <div class="row justify-content-center navbar-title">
+                    <div class="row justify-content-center navbar-title mt-1">
                         Pet Info
                     </div>
                 </div>
@@ -252,7 +250,7 @@
                     <div class="row">
                         <img src="../images/message_page.png" class="navbar-item img-responsive">
                     </div>
-                    <div class="row justify-content-center navbar-title">
+                    <div class="row justify-content-center navbar-title mt-1">
                         Message
                     </div>
                 </div>
@@ -260,15 +258,15 @@
                     <div class="row">
                         <img src="../images/health_page.png" class="navbar-item img-responsive">
                     </div>
-                    <div class="row justify-content-center navbar-title">
+                    <div class="row justify-content-center navbar-title mt-1">
                         Health
                     </div>
                 </div>
                 <div class="col-3 justify-content-center">
                     <div class="row">
-                        <img src="../images/food_page.png" class="navbar-item img-responsive">
+                        <img src="../images/food_page_selected.png" class="navbar-item img-responsive">
                     </div>
-                    <div class="row justify-content-center navbar-title">
+                    <div class="row justify-content-center navbar-title mt-1 border-white rounded selected-navbar-item">
                         Nutrition
                     </div>
                 </div>
