navbar for health

--- a/public/food/main.html
+++ b/public/food/main.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <nav class="navbar-custom pt-2 pb-2">
+    <nav class="navbar-custom fixed-top pt-2 pb-2">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="/images/paw_logo.png" width="30" height="30" class="d-inline-block align-text-top">
@@ -22,6 +22,8 @@
           </a>
         </div>
     </nav>
+    <br>
+    <br>
     <div class="container">
         <div class="row mt-4 mb-2 title">
             <div class="col-12">
@@ -238,7 +240,7 @@
     <nav class="navbar-custom fixed-bottom justify-content-center pt-2 pb-2">
         <div class="container-fluid">
             <div class="row justify-content-center">
-                <div class="col-3 justify-content-center">
+                <div class="col-3 justify-content-center" id="info-page">
                     <div class="row">
                         <img src="../images/info_page.png" class="navbar-item img-responsive">
                     </div>
@@ -246,7 +248,7 @@
                         Pet Info
                     </div>
                 </div>
-                <div class="col-3 justify-content-center">
+                <div class="col-3 justify-content-center" id="message-page">
                     <div class="row">
                         <img src="../images/message_page.png" class="navbar-item img-responsive">
                     </div>
@@ -254,7 +256,7 @@
                         Message
                     </div>
                 </div>
-                <div class="col-3 justify-content-center">
+                <div class="col-3 justify-content-center" id="health-page">
                     <div class="row">
                         <img src="../images/health_page.png" class="navbar-item img-responsive">
                     </div>
@@ -262,7 +264,7 @@
                         Health
                     </div>
                 </div>
-                <div class="col-3 justify-content-center">
+                <div class="col-3 justify-content-center" id="food-page">
                     <div class="row">
                         <img src="../images/food_page_selected.png" class="navbar-item img-responsive">
                     </div>
