--- a/public/health/health.html
+++ b/public/health/health.html
@@ -14,6 +14,16 @@
 </head>
 
 <body>
+    <nav class="navbar-custom fixed-top pt-2 pb-2">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/images/paw_logo.png" width="30" height="30" class="d-inline-block align-text-top">
+            <span class="navbar-title">Keep Paws Posted</span>
+          </a>
+        </div>
+    </nav>
+    <br>
+    <br>
     <div>
         <h1> Barney's Daily View </h1>
 
@@ -277,6 +287,48 @@
             <p> View Notes </p>
         </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+<nav class="navbar-custom fixed-bottom justify-content-center pt-2 pb-2">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+            <div class="col-3 justify-content-center" id="info-page">
+                <div class="row">
+                    <img src="../images/info_page.png" class="navbar-item img-responsive">
+                </div>
+                <div class="row justify-content-center navbar-title mt-1">
+                    Pet Info
+                </div>
+            </div>
+            <div class="col-3 justify-content-center" id="message-page">
+                <div class="row">
+                    <img src="../images/message_page.png" class="navbar-item img-responsive">
+                </div>
+                <div class="row justify-content-center navbar-title mt-1">
+                    Message
+                </div>
+            </div>
+            <div class="col-3 justify-content-center" id="health-page">
+                <div class="row">
+                    <img src="../images/health_page_selected.png" class="navbar-item img-responsive">
+                </div>
+                <div class="row justify-content-center navbar-title mt-1 border-white rounded selected-navbar-item">
+                    Health
+                </div>
+            </div>
+            <div class="col-3 justify-content-center" id="food-page">
+                <div class="row">
+                    <img src="../images/food_page.png" class="navbar-item img-responsive">
+                </div>
+                <div class="row justify-content-center navbar-title mt-1">
+                    Nutrition
+                </div>
+            </div>
+        </div>
+    </div>
+</nav>
 </body>
 
 </html>
