--- a/public/food/main.html
+++ b/public/food/main.html
@@ -6,10 +6,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/food.css">
+<link rel="stylesheet" type="text/css" href="/css/navbar.css">
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="../js/food.js"></script>
+<script src="../js/navbar.js"></script>
+
 <!-- <script src="main.js"></script> -->
 </head>
 
