--- a/public/health/health.html
+++ b/public/health/health.html
@@ -9,6 +9,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="/css/styles.css">
 <link rel="stylesheet" type="text/css" href="/css/health.css">
+<link rel="stylesheet" type="text/css" href="/css/navbar.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="../js/navbar.js"></script>
 
 <!-- <script src="main.js"></script> -->
 </head>
