--- a/public/life/profile.html
+++ b/public/life/profile.html
@@ -1,94 +1,200 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="utf-8">
-    <title>ConVolter</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="/css/food.css">
+<link rel="stylesheet" type="text/css" href="/css/navbar.css">
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="../js/navbar.js"></script>
+
+<!-- <script src="main.js"></script> -->
 </head>
 
-<!-- Basic Page Needs
-    ================================================== -->
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<body>
+    <nav class="navbar-custom fixed-top pt-2 pb-2">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/images/paw_logo.png" width="30" height="30" class="d-inline-block align-text-top">
+            <span class="navbar-title">Keep Paws Posted</span>
+          </a>
+        </div>
+    </nav>
+    <br>
+    <br>
+    <div class="container">
+        <div class="row mt-4 mb-2 title">
+            <div class="col-12">
+                Pet's profile
+            </div>
+        </div>
+        <div class="container-fluid rounded section-background pt-2 pb-2">
+            <div class="row">
+                <div class="col justify-content-center">
+                    <img src="/images/pet_picture.jpg" height="200" class="d-inline-block align-text-top rounded">
+                </div>
+                <div class="col my-auto">
+                    <div class="title">Barney</div>
+                    <br>
+                    <div class="subtitle">Birthday</div>
+                    <div class="text-gray">Jan 1, 2020</div>
+                    <br>
+                    <div class="subtitle">Weight</div>
+                    <div class="text-gray">10 lbs</div>
+                </div>
+            </div>
+        </div>
 
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content="">
-
-    <!-- Mobile Specific Metas
-    ================================================== -->
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400,600,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
-
-    <!-- Stylesheets
-    ================================================== -->
-    <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="../css/style.css" rel="stylesheet">
-    <link href="../css/responsive.css" rel="stylesheet">
-
-
-    <body>
-        <header id="masthead" class="site-header">
-            <nav id="primary-navigation" class="site-navigation">
-                <div class="container">
-
-                    <div class="navbar-header">
-                        <a class="site-title">Con<span>Volt</span>er</a>
-                    </div><!-- /.navbar-header -->
-
-                    <div class="collapse navbar-collapse" id="agency-navbar-collapse">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="active"><a href="index.html">Converter</a></li>
-                            <li><a href="https://github.com/AndrewXin123/ConVolter" target="_blank">GitHub</a></li>
-                            </li>
-                        </ul>
+        <div class="row mt-4 mb-2 title">
+            <div class="col-12">
+                Information
+            </div>
+        </div>
+        <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
+            <div class="col-12 subtitle">
+                About Me
+            </div>
+            <div id="nutrition-overview">
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Favorite Thing
+                    </div>
+                    <div class="col-6 text-black">
+                        Playing fetch
                     </div>
                 </div>
-            </nav><!-- /.site-navigation -->
-        </header><!-- /#mastheaed -->
-    </body>
-
-    
-
-
-<footer id="colophon" class="site-footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4 col-sm-4 col-xs-6">
-                        <a class="site-title">Con<span>Volt</span>er</a>
-                        <p>Built by Andrew Zhang for CS 160 (User Interface Design and Development).
-                        </p>
-                        <br>
-                        <ul class="list-unstyled contact-links">
-                            <li><i class="fa fa-map-marker" aria-hidden="true"></i>
-                                <p>University of California, Berkeley</p>
-                            </li>
-                        </ul>
-                        </p>
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Best Friend
+                    </div>
+                    <div class="col-6 text-black">
+                        Lucy the dog
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Adoption Date
+                    </div>
+                    <div class="col-6 text-gray">
+                        - No data -
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Siblings
+                    </div>
+                    <div class="col-6 text-gray">
+                        - No data -
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Favorite Food
+                    </div>
+                    <div class="col-6 text-gray">
+                        - No data -
                     </div>
                 </div>
             </div>
-        </footer><!-- /#footer -->
+        </div>
+        <br>
+        <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
+            <div class="col-12 subtitle">
+                Important Records
+            </div>
 
-
-        <!-- Bootstrap core JavaScript
-    ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="../js/bootstrap.min.js"></script>
-        <script src="../js/bootstrap-select.min.js"></script>
-        <script src="../js/jquery.slicknav.min.js"></script>
-        <script src="../js/jquery.countTo.min.js"></script>
-        <script src="../js/jquery.shuffle.min.js"></script>
-        <script src="../js/script.js"></script>
-
-    </body>
+            <div id="nutrition-overview">
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Vet Phone
+                    </div>
+                    <div class="col-6 text-black">
+                        (123) 456-7890
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Pet Insurance
+                    </div>
+                    <div class="col-6 text-black">
+                        XYZ Insurance
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Medical Cond.
+                    </div>
+                    <div class="col-6 text-gray">
+                        - No data -
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Dietary Notes
+                    </div>
+                    <div class="col-6 text-gray">
+                        - No data -
+                    </div>
+                </div>
+                <div class="row mt-3">
+                    <div class="col-6 text-black-bold">
+                        Special Needs
+                    </div>
+                    <div class="col-6 text-gray">
+                        - No data -
+                    </div>
+                </div>
+            </div>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+    </div>
+    <nav class="navbar-custom fixed-bottom justify-content-center pt-2 pb-2">
+        <div class="container-fluid">
+            <div class="row justify-content-center">
+                <div class="col-3 justify-content-center" id="info-page">
+                    <div class="row">
+                        <img src="../images/info_page_selected.png" class="navbar-item img-responsive">
+                    </div>
+                    <div class="row justify-content-center navbar-title mt-1 border-white rounded selected-navbar-item">
+                        Pet Info
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center" id="message-page">
+                    <div class="row">
+                        <img src="../images/message_page.png" class="navbar-item img-responsive">
+                    </div>
+                    <div class="row justify-content-center navbar-title mt-1">
+                        Message
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center" id="health-page">
+                    <div class="row">
+                        <img src="../images/health_page.png" class="navbar-item img-responsive">
+                    </div>
+                    <div class="row justify-content-center navbar-title mt-1">
+                        Health
+                    </div>
+                </div>
+                <div class="col-3 justify-content-center" id="food-page">
+                    <div class="row">
+                        <img src="../images/food_page.png" class="navbar-item img-responsive">
+                    </div>
+                    <div class="row justify-content-center navbar-title mt-1">
+                        Nutrition
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+</body>
 
 </html>
