finished implementing general info interaction

--- a/public/health/health.html
+++ b/public/health/health.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="/css/navbar.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="../js/profile.js"></script>
 <script src="../js/navbar.js"></script>
 
 <!-- <script src="main.js"></script> -->
@@ -303,7 +304,7 @@
                     <img src="../images/info_page.png" class="navbar-item img-responsive">
                 </div>
                 <div class="row justify-content-center navbar-title mt-1">
-                    Pet Info
+                    Profile
                 </div>
             </div>
             <div class="col-3 justify-content-center" id="message-page">
