--- a/public/food/main.html
+++ b/public/food/main.html
@@ -250,7 +250,7 @@
                         <img src="../images/info_page.png" class="navbar-item img-responsive">
                     </div>
                     <div class="row justify-content-center navbar-title mt-1">
-                        Pet Info
+                        Profile
                     </div>
                 </div>
                 <div class="col-3 justify-content-center" id="message-page">
