--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -301,12 +301,12 @@
                         Profile
                     </div>
                 </div>
-                <div class="col-3 justify-content-center" id="message-page">
+                <div class="col-3 justify-content-center" id="moments-page">
                     <div class="row">
-                        <img src="../images/message_page.png" class="navbar-item img-responsive">
+                        <img src="../images/moments_page.png" class="navbar-item img-responsive">
                     </div>
                     <div class="row justify-content-center navbar-title mt-1">
-                        Message
+                        Moments
                     </div>
                 </div>
                 <div class="col-3 justify-content-center" id="health-page">
