--- a/public/food/main.html
+++ b/public/food/main.html
@@ -134,58 +134,6 @@
                 Overview
             </div>
             <div id="nutrition-overview">
-                <div class="row mt-3">
-                    <div class="col-4 nutrition-name">
-                        Water
-                    </div>
-                    <div class="col-8">
-                        <div class="text-success">
-                            OK
-                        </div>
-                        <div>
-                            It has the right amount!
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-4 nutrition-name">
-                        Calories
-                    </div>
-                    <div class="col-8">
-                        <div class="text-danger">
-                            Too much
-                        </div>
-                        <div>
-                            It has the right amount!
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-4 nutrition-name">
-                        Fats
-                    </div>
-                    <div class="col-8">
-                        <div class="text-danger">
-                            Too little
-                        </div>
-                        <div class="text-danger">
-                            Need at least 5g more.
-                        </div>
-                    </div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-4 nutrition-name">
-                        Proteins
-                    </div>
-                    <div class="col-8">
-                        <div class="text-success">
-                            OK
-                        </div>
-                        <div>
-                            It has the right amount!
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
         <br>
@@ -193,7 +141,6 @@
             <div class="col-12 subtitle">
                 Analysis
             </div>
-
             <div id="nutrition-analysis">
             </div>
         </div>
@@ -244,7 +191,7 @@
     </div>
     <nav class="navbar-custom fixed-bottom justify-content-center pt-2 pb-2">
         <div class="container-fluid">
-            <div class="row justify-content-center mt-1 mb-1">
+            <div class="row justify-content-center mb-2">
                 <div class="col-3 justify-content-center" id="info-page">
                     <div class="row">
                         <img src="../images/info_page.png" class="navbar-item img-responsive">
