--- a/public/health/health.html
+++ b/public/health/health.html
@@ -298,7 +298,7 @@
     <br>
 <nav class="navbar-custom fixed-bottom justify-content-center pt-2 pb-2">
     <div class="container-fluid">
-        <div class="row justify-content-center mt-1 mb-1">
+        <div class="row justify-content-center mb-2">
             <div class="col-3 justify-content-center" id="info-page">
                 <div class="row">
                     <img src="../images/info_page.png" class="navbar-item img-responsive">
