--- a/public/moments/moments.html
+++ b/public/moments/moments.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" type="text/css" href="/css/navbar.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-<script src="../js/profile.js"></script>
+<script src="../js/moments.js"></script>
 <script src="../js/navbar.js"></script>
 
 <!-- <script src="main.js"></script> -->
@@ -86,47 +86,110 @@
             </div>
         </div>
         <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
-            <div class="container-fluid rounded section-background pt-1 pb-1 mt-2 mb-2">
-                <div class="row mt-2 mb-2">
-                    <img src="/images/pet_picture.jpg" class="d-inline-block align-text-top rounded">
-                </div>
-                <div class="row subtitle">
-                    <div class="col">
-                        Barney
-                    </div>
-                </div>
-                <div class="row text-gray">
-                    <div class="col">
-                        2023/01/01
-                    </div>
-                </div>
-                <br>
-                <div class="row text-black mb-2">
-                    <div class="col">
-                        This is Barney!
-                    </div>
-                </div>   
+            <div class="scrolling-wrapper row flex-row flex-nowrap justify-content-center mt-3 mb-3" id="no-moment">
+                There is no moment.
             </div>
-            <div class="container-fluid rounded section-background pt-1 pb-1 mt-2 mb-2">
-                <div class="row mt-2 mb-2">
-                    <img src="/images/pet_picture.jpg" class="d-inline-block align-text-top rounded">
-                </div>
-                <div class="row subtitle">
-                    <div class="col">
-                        Barney
+            <div id="moment-list">
+                <div class="moment-card">
+                    <div class="container-fluid rounded section-background pt-1 pb-1 mt-2">
+                        <div class="row mt-2 mb-2">
+                            <img src="/images/pet_picture.jpg" class="d-inline-block align-text-top rounded" id="moment-image">
+                        </div>
+                        <div class="row subtitle">
+                            <div class="col-9" id="moment-name">
+                                Barney
+                            </div>
+                            <div class="col-2 edit-button rounded text-center" id="moment-edit-1">
+                                Edit
+                            </div>
+                        </div>
+                        <div class="row text-gray">
+                            <div class="col" id="moment-date">
+                                2023/01/01
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row text-black mb-2">
+                            <div class="col" id="moment-description">
+                                This is Barney!
+                            </div>
+                        </div>   
+                    </div>
+                    <div class="container rounded amount-change pt-2 pb-2 moment-change" id="moment-change-1">
+                        <div class="col-12 subtitle">
+                            Moment Change
+                        </div>
+                        <div class="row align-items-center mt-3 mb-2">
+                            <div class="col justify-content-center">
+                                <div class="row mt-2 mb-2">
+                                    <div class="col-4 my-auto text-black-bold">
+                                        <label for="milestone-name">Name</label>
+                                    </div>
+                                    <div class="col-8 my-auto">
+                                        <input type="text" id="milestone-name" required>
+                                    </div>
+                                </div>
+                                <div class="row mt-2 mb-2">
+                                    <div class="col-4 my-auto text-black-bold">
+                                        <label for="milestone-date">Date</label>
+                                    </div>
+                                    <div class="col-8 my-auto">
+                                        <input type="date" id="milestone-date" required>
+                                    </div>
+                                </div>
+                                <div class="row mt-2 mb-2">
+                                    <div class="col-4 my-auto text-black-bold">
+                                        <label for="milestone-description">Description</label>
+                                    </div>
+                                    <div class="col-8 my-auto">
+                                        <input type="text" id="milestone-description" required>
+                                    </div>
+                                </div>
+                                <div class="row mt-2 mb-2">
+                                    <div class="col-4 my-auto text-black-bold">
+                                        <label for="milestone-image">Image</label>
+                                    </div>
+                                    <div class="col-8 my-auto">
+                                        <input type="file" id="milestone-image">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6"></div>
+                            <div class="col-3 justify-content-center">
+                                <div class="row">
+                                    <img src="../images/food_discard.png" class="discard-moment" id="discard-moment-1">
+                                </div>
+                            </div>
+                            <div class="col-3 justify-content-center">
+                                <div class="row">
+                                    <img src="../images/food_confirm.png" class="confirm-moment" id="confirm-moment-1">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container rounded are-you-sure pt-2 pb-2 mb-2" id="are-you-sure-1">
+                        <div class="col-12 subtitle">
+                            Are you sure?
+                        </div>
+                        <div class="row align-items-center mt-3 mb-2">
+                            <div class="col-6 justify-content-center are-you-sure-text">
+                                Do you want to delete this moment?
+                            </div>
+                            <div class="col-3 justify-content-center">
+                                <div class="row">
+                                    <img src="../images/food_confirm.png" class="confirm-delete" id="confirm-delete-1">
+                                </div>
+                            </div>
+                            <div class="col-3 justify-content-center">
+                                <div class="row">
+                                    <img src="../images/food_cancel.png" class="cancel-delete" id="cancel-delete-1">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="row text-gray">
-                    <div class="col">
-                        2023/01/01
-                    </div>
-                </div>
-                <br>
-                <div class="row text-black mb-2">
-                    <div class="col">
-                        This is Barney!
-                    </div>
-                </div>   
             </div>
             <div id="milestone-list"></div>
         </div>
@@ -182,7 +245,7 @@
     </div>
     <nav class="navbar-custom fixed-bottom justify-content-center pt-2 pb-2">
         <div class="container-fluid">
-            <div class="row justify-content-center mt-1 mb-1">
+            <div class="row justify-content-center mb-2">
                 <div class="col-3 justify-content-center" id="info-page">
                     <div class="row">
                         <img src="../images/info_page.png" class="navbar-item img-responsive">
