functioning moments page

--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -38,7 +38,7 @@
         <div class="container-fluid rounded section-background pt-2 pb-2">
             <div class="row">
                 <div class="col justify-content-center">
-                    <img src="/images/pet_picture.jpg" height="200" class="d-inline-block align-text-top rounded">
+                    <img src="/images/pet_picture_1.png" height="200" class="d-inline-block align-text-top rounded">
                 </div>
                 <div class="col my-auto">
                     <div class="title">Barney</div>
