--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">  
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- Jump to profile page after 3 seconds -->
+<meta http-equiv="refresh" content="3; url=/profile/profile.html" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
@@ -23,12 +24,7 @@
                 <p>Keep Paws Posted</p>
             </div>
         </div>
-        <div class="row">
-            <a href="/health/health.html">Health</a>
-            <a href="/food/main.html">Nutrition</a>
-            <a href="/life/memories.html">Memories</a>
-            <a href="/life/milestones.html">Milestones</a>
-        </div>
+        <br><br><br><br>
         <br><br><br><br>
         <div class="d-flex justify-content-center m-5">
             <div class="spinner-border text-primary loading" role="status">
