--- a/public/moments/moments.html
+++ b/public/moments/moments.html
@@ -22,7 +22,7 @@
 <body>
     <nav class="navbar-custom fixed-top pt-2 pb-2">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../index.html">
             <img src="/images/paw_logo.png" width="30" height="30" class="d-inline-block align-text-top">
             <span class="navbar-title">Keep Paws Posted</span>
           </a>
