health css adjusted

--- a/public/profile/profile.html
+++ b/public/profile/profile.html
@@ -56,14 +56,7 @@
             </div>
         </div>
         <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
-            <div class="row">
-                <div class="col-9 subtitle">
-                    General Info
-                </div>
-                <div class="col-2 edit-button rounded text-center" id="info-edit">
-                    Edit
-                </div>
-            </div>
+            <div class="horizontal-space mt-2 mb-2"> <div class="subtitle" style="margin: 0">General Info</div> <div class="edit-button rounded text-center" id="info-edit">Edit</div></div>
             <div id="nutrition-overview">
                 <div class="row mt-3">
                     <div class="col-6 text-black-bold">
@@ -180,15 +173,7 @@
         </div>
         <br>
         <div class="container rounded pt-2 pb-2" style="border:2px solid #D9D9D9">
-            <div class="row">
-                <div class="col-9 subtitle">
-                    Important Records
-                </div>
-                <div class="col-2 edit-button rounded text-center" id="record-edit">
-                    Edit
-                </div>
-            </div>
-
+            <div class="horizontal-space mt-2 mb-2"> <div class="subtitle" style="margin: 0">Important Records</div> <div class="edit-button rounded text-center" id="record-edit">Edit</div></div>
             <div id="nutrition-overview">
                 <div class="row mt-3">
                     <div class="col-6 text-black-bold">
