health css adjusted

--- a/public/health/health.html
+++ b/public/health/health.html
@@ -93,10 +93,10 @@
     </div>
 
     <div>
-        <div class="row mt-4 mb-4">
+        <div class="row mt-4 mb-2">
             <div class="title">Vethub</div>
         </div>
-        <div class="outline">
+        <div class="outline mt-1 mb-2">
             <div class="horizontal-space mt-2 mb-2"> <div class="subtitle" style="margin: 0">Appointments</div> <div class="schedule-button">&#43 Schedule</div></div>
             
             <div class="horizontal-space" style="align-items: center">
@@ -130,7 +130,7 @@
             </div>
         </div>
 
-        <div class="outline">
+        <div class="outline mt-1 mb-2">
             <div class="horizontal-space mt-2 mb-2"> <div class="subtitle" style="margin: 0">Vaccination</div> <div class="schedule-button">&#43 Add</div></div>
             <div class="horizontal-space" style="align-items: center;">
                 <div class="appt">
