--- a/public/health/health.html
+++ b/public/health/health.html
@@ -195,7 +195,7 @@
     </div>
 
     <div>
-        <div class="horizontal-space mt-4 mb-2" style="align-items: center"> <div class="title">Vethub</div> <div class="filter-button"> Filter </div></div>
+        <div class="horizontal-space mt-4 mb-2" style="align-items: center"> <div class="title">Daily Logs</div> <div class="filter-button"> Filter </div></div>
 
         <div class="horizontal-space gray-bg logs" style="align-items: center;">
             <div class="log">
